--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,18 +1,11 @@
-public-f net.minecraft.item.AxeItem field_203176_a # BLOCK_STRIPPING_MAP
 public-f net.minecraft.world.gen.feature.structure.Structure field_236384_t_
 public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236191_b_ #DEFAULT_STRUCTURE_CONFIGS
 public-f net.minecraft.world.gen.FlatGenerationSettings field_202247_j #STRUCTURES
 public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236193_d_ #structures
-
-public net.minecraft.client.gui.screen.inventory.InventoryScreen field_147048_u #oldMouseX
-public net.minecraft.client.gui.screen.inventory.InventoryScreen field_147047_v #oldMouseY
-
-
-public net.minecraft.client.gui.screen.inventory.CreativeScreen field_147064_C #destroyItemSlot
-public net.minecraft.client.gui.recipebook.RecipeBookGui field_193018_j #recipeTabs
-public net.minecraft.inventory.container.Container field_75153_a #inventoryItemStacks
-
-protected-f net.minecraft.inventory.container.Container field_216965_e #containerType
-public-f net.minecraft.inventory.container.Container field_75152_c #windowId
-
-public net.minecraft.client.gui.screen.inventory.ContainerScreen func_195360_a(DD)Lnet/minecraft/inventory/container/Slot;  #func_195360_a
+public net.minecraft.server.MinecraftServer field_213220_d # progressListenerFactory
+public net.minecraft.server.MinecraftServer field_213217_au # executor
+public net.minecraft.server.MinecraftServer field_71310_m # storageSource
+public net.minecraft.world.border.WorldBorder field_177758_a # listeners
+public-f net.minecraft.world.gen.settings.DimensionGeneratorSettings field_236208_h_ # dimensions
+public net.minecraft.world.border.IBorderListener$Impl field_219590_a # worldBorder
+public+f net.minecraft.client.renderer.FirstPersonRenderer field_178112_h #itemRenderer
