added abilities to the fishing rod reiatsu thingy

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -11,3 +11,6 @@ public net.minecraft.server.MinecraftServer field_71310_m # storageSource
 public net.minecraft.world.border.WorldBorder field_177758_a # listeners
 public net.minecraft.world.border.IBorderListener$Impl field_219590_a # worldBorder
 public+f net.minecraft.client.renderer.FirstPersonRenderer field_178112_h #itemRenderer
+
+public-f net.minecraft.entity.projectile.FishingBobberEntity field_146043_c # fishing bobber hooked in entity
+public net.minecraft.entity.projectile.FishingBobberEntity func_190622_s # set hooked in entity
